Création des diférents roles de Users (Admin, Tech et Visiteur). Sécurisation de l'appli et authentification par Token fonctionnel. RAF les tests unitaires et les logs.

--- a/P7CreateRestApi/appsettings.json
+++ b/P7CreateRestApi/appsettings.json
@@ -1,13 +1,18 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Findexium;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ApplicationDbContext": "Server=(localdb)\\mssqllocaldb;Database=;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FindexiumConnectionString": "Server=(localdb)\\mssqllocaldb;Database=Findexium;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+    "FindexiumAuthConnectionString": "Server=(localdb)\\mssqllocaldb;Database=FindexiumAuthDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "1Kmt!UPwDBDG!-KvZgR4/muf-ijM1H2yYAicklhydYRwysG5Np8K=XCfWlopjFY-At2bkagGb?lM5YzZLBY7yOn!oRTl7uO8zI2G2mJzczMqMIY8M2ivHXLgvDTgGFDzm0B43PdzF/ln?-S=lkdg/!meUcP=ON56Nn8qzzaj3UTxSN/k08zw7Osd-f8dZCc0Fmc8WYAL6O05P!LU=rVDUI7i3l21NqW2VpWZRmfJ89T6j-gizRF62oo1mfoSTqzE",
+    "Issuer": "https://localhost:7210",
+    "Audience": "https://localhost:7210"
+  }
 }
